--- a/index.html
+++ b/index.html
@@ -5,17 +5,24 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
+    integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
   <link rel="stylesheet" href="./styles/main.css">
   <title>Bon Ciné</title>
 </head>
 
 <body>
-  <h1>BonCiné.com</h1>
+
+  <header>
+    <h1>BonCiné.com</h1>
+  </header>
+
   <h3 class="slogan">Découvrez et partagez des films !</h3>
-  <img src="./img/logo_site.jpg" alt="logo du site">
+  <img class="logo" src="./img/logo_site.jpg" alt="logo du site">
   <div>
-    <a href="./view/create.html">publier un nouveau film</a>
+    <a class="btn" href="./view/create.html">publier un nouveau film</a>
   </div>
+
 </body>
 
 </html>
