ajout page create.html + style formulaire

--- a/index.html
+++ b/index.html
@@ -28,10 +28,13 @@
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Accueil</a>
+                <a class="nav-link active" aria-current="page"
+                  href="http://localhost/studi/exo_php/lives/Chris_CHEVALIER/allocine.com/index.html">Accueil</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Publier un film</a>
+                <a class="nav-link"
+                  href="http://localhost/studi/exo_php/lives/Chris_CHEVALIER/allocine.com/view/create.html">Publier un
+                  film</a>
               </li>
             </ul>
           </div>
@@ -40,8 +43,12 @@
     </div>
   </header>
 
+  <main>
 
-  <h3 class="slogan">Découvrez et partagez des films !</h3>
+    <div class="banniere">
+      <h3 class="slogan">Découvrez et partagez des films !</h3>
+    </div>
+  </main>
 
 
 
